src/test/deca/syntax/invalid/created/no_init_but_value/float.deca
// Description:
//      Pas d'initialisation mais valeur donnee
// Resultats:
//      Error Ligne 7 : extraneous input '8.9' expecting ';'

{
    float x 8.9;
}